# experiments-loop-functions

./: .gitignore
loop-functions/complexity/: AggregationSingleSpot.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
loop-functions/complexity/vanilla/: Makefile
loop-functions/example/: CMakeCache.txt  CMakeLists.txt  ExampleAggregationLoopFunc.cpp  ExampleAggregationLoopFunc.h  Makefile  cmake_install.cmake
loop-functions/example/vanilla/: Makefile  cmake_install.cmake
loop-functions/vanilla/: AggregationSingleSpotLoopFunc.cpp  AggregationSingleSpotLoopFunc.h  AggregationTwoSpotsLoopFunc.cpp  AggregationTwoSpotsLoopFunc.h  CMakeLists.txt  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h
src/: CoreLoopFunctions.cpp  CoreLoopFunctions.h
